# dingwall-ai

./: LICENSE  LOG.md  README.md  pyproject.toml
dingwall_ai/data/: README.md  data.py  test.py
